@@ -1,23 +1,26 @@
 package com.fpt.producerworkbench.service.impl;
 
+import com.fpt.producerworkbench.dto.response.FileMetaDataResponse;
 import com.fpt.producerworkbench.service.FileKeyGenerator;
+import com.fpt.producerworkbench.service.FileService;
 import com.fpt.producerworkbench.service.FileStorageService;
-import com.fpt.producerworkbench.service.S3TestService;
+import com.fpt.producerworkbench.service.PublicUrlService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class S3TestServiceImpl implements S3TestService {
+public class FileServiceImpl implements FileService {
 
     private final FileKeyGenerator fileKeyGenerator;
     private final FileStorageService fileStorageService;
+    private final PublicUrlService publicUrlService;
 
     @Override
     public String uploadUserAvatar(Long userId, MultipartFile file) {
@@ -92,6 +95,34 @@ public class S3TestServiceImpl implements S3TestService {
     }
 
     @Override
+    public CompletableFuture<List<FileMetaDataResponse>> uploadChatMessageFile(String conversationId, List<MultipartFile> files) {
+        AtomicInteger orderCounter = new AtomicInteger(0);
+
+        List<CompletableFuture<FileMetaDataResponse>> futures = files.stream()
+                .filter(file -> !file.isEmpty())
+                .map(file ->
+                CompletableFuture.supplyAsync(() -> {
+                    int displayOrder = orderCounter.incrementAndGet();
+                    String key = fileKeyGenerator.generateChatMessageFileKey(conversationId, file.getOriginalFilename());
+                    fileStorageService.uploadFile(file, key);
+
+                    return FileMetaDataResponse.builder()
+                            .url(fileStorageService.generatePermanentUrl(key))
+                            .name(file.getOriginalFilename())
+                            .contentType(file.getContentType())
+                            .size(file.getSize())
+                            .displayOrder(displayOrder)
+                            .build();
+                })
+        ).toList();
+
+        return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
+                .thenApply(v -> futures.stream()
+                .map(CompletableFuture::join)
+                .toList());
+    }
+
+    @Override
     public List<String> uploadProjectFiles(Long projectId, List<MultipartFile> files) {
         List<CompletableFuture<String>> futures = files.stream().map(file ->
                 CompletableFuture.supplyAsync(() -> {
@@ -99,12 +130,12 @@ public class S3TestServiceImpl implements S3TestService {
                     fileStorageService.uploadFile(file, key);
                     return key;
                 })
-        ).collect(Collectors.toList());
+        ).toList();
 
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
 
         return futures.stream()
                 .map(CompletableFuture::join)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
